Added more links

--- a/content/en/blog/news/entries/2023-09-26.md
+++ b/content/en/blog/news/entries/2023-09-26.md
@@ -1,15 +1,14 @@
 ---
 title: "Open MLIR Meeting 9/28/2023: [RFC] Sharding Framework Design for Device Mesh"
-linkTitle:  Open MLIR Meeting 9/28/2023
-date: 2023-09-21
-keywords: ["MLIR Open Meeting", "ByteIR"]
-weight: 1
-description: >
+date: 2023-09-26
+weight: 2
+keywords: ["MLIR Meeting", "ByteIR"]
+description: Talk at Open MLIR Meeting
 ---
+
 
 On 9/28/2023 (9am California Time, 16:00 UTC), 
 ByteIR will present a proposal on \[RFC\] Sharding Framework Design for Device Mesh.
-
 
 More details:
 https://discourse.llvm.org/t/open-mlir-meeting-9-28-2023-rfc-sharding-framework-design-for-device-mesh/73695
