add presenter's name

--- a/content/en/blog/news/entries/2023-09-26.md
+++ b/content/en/blog/news/entries/2023-09-26.md
@@ -8,7 +8,7 @@ description: Talk at Open MLIR Meeting
 
 
 On 9/28/2023 (9am California Time, 16:00 UTC), 
-ByteIR will present a proposal on \[RFC\] Sharding Framework Design for Device Mesh.
+Chengji Yao will represent the ByteIR team to present a proposal on \[RFC\] Sharding Framework Design for Device Mesh.
 
 More details:
 https://discourse.llvm.org/t/open-mlir-meeting-9-28-2023-rfc-sharding-framework-design-for-device-mesh/73695
