--- a/content/en/blog/news/entries/2023-09-19.md
+++ b/content/en/blog/news/entries/2023-09-19.md
@@ -3,7 +3,7 @@ title: "Talk at Open Source Summit China 2023"
 date: 2023-09-19
 weight: 2
 keywords: ["OpenSourceSummit", "ByteIR"]
-description: 
+description: Talk at Open Source Summit China 2023
 ---
 
 We are going to give a talk: "ByteIR: Towards Seamless Model Compilation Integration" at Open Source Summit China 2023! Don't miss our talk and find more about our project at ​https://byteir.ai! #OpenSourceSummit #ByteIR
