--- a/content/en/blog/news/entries/2023-09-26.md
+++ b/content/en/blog/news/entries/2023-09-26.md
@@ -15,3 +15,5 @@ https://discourse.llvm.org/t/open-mlir-meeting-9-28-2023-rfc-sharding-framework-
 
 
 [Zoom Meeting Link](https://us06web.zoom.us/j/85151090498?pwd=QUdqUGNETzVxMTBnM1p4UDVrdVVKUT09)
+
+<font color="#00008B"><b> [Update on 9/28] </b></font> Here are the links for the [slide](https://mlir.llvm.org/OpenMeetings/2023-09-28-Sharding-Framework-Design-for-Device-Mesh.pdf) and the [recording](https://youtu.be/vL6VNbJkc6Q).
