add release, add openxla summit date, remove FAQ, Overview

--- a/content/en/blog/news/entries/2023-04-27.md
+++ b/content/en/blog/news/entries/2023-04-27.md
@@ -1,11 +1,11 @@
 ---
-title: "OpenXLA Developer Summit"
+title: "OpenXLA Developer Summit on April 27, 2023"
 date: 2023-04-27
 weight: 2
 keywords: ["OpenXLA", "ByteIR"]
-description: "OpenXLA Developer Summit"
+description: "OpenXLA Developer Summit on April 27, 2023"
 ---
 
-Who is at OpenXLA Developer Summit?
+Find out who is at OpenXLA Developer Summit! Here are the [videos](https://www.youtube.com/playlist?list=PLlFotmaRrOzsznwKi-28bOOsANARrSxKw) from OpenXLA's first developer summit.
 
 <img src="/img/blog/openxla-developer/openxla-dev-summit.jpeg">
