[WIP] fix spaces, add docs except Tutorials. TODO: add docs/Tutorials

--- a/i18n/zh.toml
+++ b/i18n/zh.toml
@@ -25,6 +25,9 @@ other = "保留所有权利"
 [footer_privacy_policy]
 other = "隐私政策"
 
+[doc_url]
+other = "/zh/docs"
+
 
 # Post (blog, articles etc.)
 [post_byline_by]
